--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,8 @@ docs/_build/
 target/
 
 # Photos shouldn't be tracked
-src/photo_cache/*
+deye/deye/src/photo_cache/*
 
 # OS X files
-src/.DS_Store
-src/classes/.DS_Store
+deye/deye/src/.DS_Store
+deye/deye/src/classes/.DS_Store
